--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body ng-app="flapperNews" ng-controller="MainCtrl">
     <div ng-repeat="post in posts">
-      {{post}}
+      {{post.title}} - Upvotes: {{post.upvotes}}
     </div>
   </body>
 </html>
